# rust-rest-api

./: Cargo.toml  Dockerfile  docker-compose.yaml
migrations/2024-09-21-192741_create_rustaceans/: up.sql
migrations/2024-09-21-192751_create_crates/: up.sql
migrations/2024-09-25-123617_create_users/: up.sql
migrations/2024-09-25-123629_create_roles/: down.sql  up.sql
migrations/2024-09-25-123645_create_users_roles/: down.sql  up.sql
src/: auth.rs  commands.rs  lib.rs  main.rs  models.rs  repositories.rs
src/rocket_routes/: authorization.rs  crates.rs  mod.rs  rustaceans.rs
tests/: authorization.rs  crates.rs  rustaceans.rs
tests/common/: mod.rs
