[package]
name = "rust-api-course"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = {  version = "2.1", features = ["chrono"] }
diesel-async = { version = "0.4" , "features" = ["postgres"] }
chrono = { version = "0.4", features = ["serde"] }
rocket = { version = "0.5", features = ["json"] }
rocket_db_pools = { version = "0.1", features = ["diesel_postgres"] }
serde = { version = "1.0" }
serde_json = "1.0"


[dev-dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }